# di-edit

./: Cargo.toml
src/: editor.rs  file.rs  lib.rs  main.rs  term.rs
src/editor/: action.rs  config.rs  row.rs
src/event/: key.rs
